--- a/multi_agent_qa/templates/history.html
+++ b/multi_agent_qa/templates/history.html
@@ -97,6 +97,7 @@
                 <a class="nav-link" href="/"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 <a class="nav-link" href="/setup"><i class="fas fa-cog"></i> Setup</a>
                 <a class="nav-link" href="/execute"><i class="fas fa-play"></i> Execute</a>
+                <a class="nav-link" href="/android-wild"><i class="fas fa-android"></i> Android Wild</a>
                 <a class="nav-link active" href="/history"><i class="fas fa-history"></i> History</a>
             </div>
         </div>
