--- a/multi_agent_qa/templates/setup.html
+++ b/multi_agent_qa/templates/setup.html
@@ -81,6 +81,7 @@
                 <a class="nav-link" href="/"><i class="fas fa-tachometer-alt me-1"></i>Dashboard</a>
                 <a class="nav-link active" href="/setup"><i class="fas fa-cog me-1"></i>Setup</a>
                 <a class="nav-link" href="/execute"><i class="fas fa-play me-1"></i>Execute</a>
+                <a class="nav-link" href="/android-wild"><i class="fas fa-android me-1"></i>Android Wild</a>
                 <a class="nav-link" href="/history"><i class="fas fa-history me-1"></i>History</a>
             </div>
         </div>
